--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lenis": "^1.3.13",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
