--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "lenis": "^1.3.13",
     "next": "16.0.1",
     "react": "19.2.0",
