--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.13",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
